--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,24 @@ plugins {
 }
 
 group = 'net.thanon'
-version = '1.0-SNAPSHOT'
+version = '1.0'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation("net.dv8tion:JDA:5.3.0")
+    implementation("org.json:json:20250107")
+
 }
 
 test {
     useJUnitPlatform()
+}
+
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile).configureEach {
+    options.encoding = 'UTF-8'
 }
