--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,9 @@ repositories {
 }
 
 dependencies {
-    implementation("net.dv8tion:JDA:5.3.0")
+    implementation("net.dv8tion:JDA:5.3.1")
     implementation("org.json:json:20250107")
-
+    implementation("io.github.cdimascio:dotenv-java:3.2.0")
 }
 
 test {
